Added NoClassFoundError Expection handling and refactors reflection code